# halinuxcompanion

./: .gitignore  pyproject.toml  setup.py  sonar-project.properties
halinuxcompanion/: dbus.py  sensor.py
