[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "halinux"
version = "0.1.0"
description = "Proyecto Halinux"
authors = [
  "Javier Lopez<je.lopez816@uniandes.edu.co>",
  "Hector Tenezaca<h.tenezaca@uniandes.edu.co>"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system.requires]
python = ">=3.7"
